# btas2012

./: CMakeLists.txt  LICENSE  README
alignment/: CMakeLists.txt  aligner.cpp  aligner.hpp  main.cpp  transform.cpp  transform.hpp  utils.hpp
